# swagger.yaml
@@ -3,24 +3,48 @@ consumes:
 - application/json
 definitions:
   Product:
+    description: Product defines the structure for an API product
     properties:
+      createdAt:
+        type: string
+        x-go-name: CreatedAt
+      deletedAt:
+        type: string
+        x-go-name: DeletedAt
       description:
+        description: the description for this poduct
+        maxLength: 10000
         type: string
         x-go-name: Description
       id:
+        description: the id for the product
         format: int64
+        minimum: 1
         type: integer
         x-go-name: ID
       name:
+        description: the name for this poduct
+        maxLength: 255
         type: string
         x-go-name: Name
       price:
-        format: float
+        description: the price for the product
+        format: double
+        minimum: 0.01
         type: number
         x-go-name: Price
       sku:
+        description: the SKU for the product
+        pattern: '[a-z]+-[a-z]+-[a-z]+'
         type: string
         x-go-name: SKU
+      updatedAt:
+        type: string
+        x-go-name: UpdatedAt
+    required:
+    - name
+    - price
+    - sku
     type: object
     x-go-package: microservice_tutorial/data
   errorResponse:
@@ -49,6 +73,13 @@ paths:
     get:
       description: Returns a list of products
       operationId: listProducts
+      parameters:
+      - description: |-
+          Currency use when returning the price of the product,
+          when not specified currency is returned in GBP.
+        in: query
+        name: Currency
+        type: string
       responses:
         "200":
           $ref: '#/responses/productResponse'
@@ -79,6 +110,21 @@ paths:
           $ref: '#/responses/noContent'
         "500":
           $ref: '#/responses/InternalServerError'
+      tags:
+      - products
+    get:
+      description: Returns a products
+      operationId: listSingleProducts
+      parameters:
+      - description: |-
+          Currency use when returning the price of the product,
+          when not specified currency is returned in GBP.
+        in: query
+        name: Currency
+        type: string
+      responses:
+        "200":
+          $ref: '#/responses/singleProductResponse'
       tags:
       - products
     put:
@@ -116,6 +162,10 @@ responses:
       items:
         $ref: '#/definitions/Product'
       type: array
+  singleProductResponse:
+    description: ""
+    schema:
+      $ref: '#/definitions/Product'
 schemes:
 - http
 swagger: "2.0"
